# QMusicPlayer

./: CMakeLists.txt  Main.qml  README.md  about.qml  filemanager.cpp  filemanager.h  folderlistmodel.cpp  folderlistmodel.h  main.cpp  player.cpp  player.h  playlist.cpp  playlist.h  settings.qml  song.cpp  song.h  songmodel.cpp  songmodel.h  static.qrc  thememanager.cpp  thememanager.h
